--- a/practicas.html
+++ b/practicas.html
@@ -108,15 +108,40 @@
              </div>
         </section>
 
-        <!-- Additional Resources Section -->
+        <!-- Blog Section -->
         <section>
-             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Para seguir profundizando</h2>
-             <div class="bg-white rounded-2xl shadow-lg p-8 max-w-2xl mx-auto">
-                <ul class="space-y-4">
-                    <li class="flex items-start"><span class="mr-3 text-purple-500">📖</span><div><h4 class="font-bold">Libro Recomendado:</h4><p class="text-gray-600">"Reiki: El Legado del Dr. Usui" - Frank Arjava Petter</p></div></li>
-                    <li class="flex items-start"><span class="mr-3 text-purple-500">🌐</span><div><h4 class="font-bold">Blog de Interés:</h4><p class="text-gray-600">Un espacio para seguir aprendiendo y creciendo en comunidad.</p></div></li>
-                    <li class="flex items-start"><span class="mr-3 text-purple-500">🤝</span><div><h4 class="font-bold">Comunidad:</h4><p class="text-gray-600">Únete a nuestro grupo para compartir experiencias y prácticas.</p></div></li>
-                </ul>
+             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Artículos del Blog para seguir profundizando</h2>
+             <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+                <!-- Blog Post 1 -->
+                <div class="bg-white rounded-2xl shadow-lg p-6 flex flex-col">
+                    <h3 class="text-xl font-bold text-gray-800">HSZSN y la No Dualidad</h3>
+                    <p class="text-gray-600 mt-2 flex-grow">Explorando cómo este símbolo nos conecta con la unidad más allá del tiempo y el espacio.</p>
+                    <a href="https://www.rinconzen.com.ar/post/hszsn-y-la-no-dualidad" target="_blank" class="text-purple-600 font-semibold mt-4 self-start">Leer más →</a>
+                </div>
+                <!-- Blog Post 2 -->
+                <div class="bg-white rounded-2xl shadow-lg p-6 flex flex-col">
+                    <h3 class="text-xl font-bold text-gray-800">Redescubriendo Nuestra Esencia (SHK)</h3>
+                    <p class="text-gray-600 mt-2 flex-grow">Un viaje hacia la luz interior a través del símbolo de la armonía emocional y mental.</p>
+                    <a href="https://www.rinconzen.com.ar/post/redescubriendo-nuestra-esencia-un-viaje-hacia-la-luz-interior-shk" target="_blank" class="text-purple-600 font-semibold mt-4 self-start">Leer más →</a>
+                </div>
+                <!-- Blog Post 3 -->
+                <div class="bg-white rounded-2xl shadow-lg p-6 flex flex-col">
+                    <h3 class="text-xl font-bold text-gray-800">El Poder del Símbolo CKR</h3>
+                    <p class="text-gray-600 mt-2 flex-grow">Una mirada profunda al símbolo del poder y su capacidad para anclar y materializar.</p>
+                    <a href="https://www.rinconzen.com.ar/post/redescubriendo-el-poder-del-s%C3%ADmbolo-ckr" target="_blank" class="text-purple-600 font-semibold mt-4 self-start">Leer más →</a>
+                </div>
+                <!-- Blog Post 4 -->
+                <div class="bg-white rounded-2xl shadow-lg p-6 flex flex-col">
+                    <h3 class="text-xl font-bold text-gray-800">El Vacío</h3>
+                    <p class="text-gray-600 mt-2 flex-grow">Explorando el concepto del vacío como un espacio fértil para la creación y la sanación.</p>
+                    <a href="https://www.rinconzen.com.ar/post/el-vac%C3%ADo" target="_blank" class="text-purple-600 font-semibold mt-4 self-start">Leer más →</a>
+                </div>
+                 <!-- Blog Post 5 -->
+                <div class="bg-white rounded-2xl shadow-lg p-6 flex flex-col md:col-span-2">
+                    <h3 class="text-xl font-bold text-gray-800">Raíces Espirituales de Japón</h3>
+                    <p class="text-gray-600 mt-2 flex-grow">Un viaje por el Shintoísmo y su profunda e inseparable relación con la práctica de Reiki.</p>
+                    <a href="https://www.rinconzen.com.ar/post/ra%C3%ADces-espirituales-de-jap%C3%B3n-un-viaje-por-el-shinto%C3%ADsmo-y-su-relaci%C3%B3n-con-reiki" target="_blank" class="text-purple-600 font-semibold mt-4 self-start">Leer más →</a>
+                </div>
              </div>
         </section>
 
