--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         </svg>
     </button>
 
-    <footer class="text-center py-8 px-4">
-        <p class="text-gray-500">&copy; 2024 Tu Rincón Zen. Creado con amor.</p>
-    </footer>
+    <footer class="main-footer">
+    <a href="https://www.rinconzen.com.ar" target="_blank">www.rinconzen.com.ar - Hecho con ❤️</a>
+</footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -133,5 +133,6 @@
 
 </body>
 </html>
+
 
 
