--- a/conceptos.html
+++ b/conceptos.html
@@ -125,12 +125,13 @@
 </button>
 
     <!-- Footer -->
-    <footer class="text-center py-8 px-4 mt-8">
-        <p class="text-gray-500">&copy; www.rinconzen.com.ar. Creado con amor.</p>
-    </footer>
+      <footer class="main-footer">
+    <a href="https://www.rinconzen.com.ar" target="_blank">www.rinconzen.com.ar - Hecho con ❤️</a>
+</footer>
 
 </body>
 </html>
+
 
 
 
