--- a/simbolos.html
+++ b/simbolos.html
@@ -131,9 +131,9 @@
         </svg>
     </button>
 
-    <footer class="text-center py-8 px-4 mt-8">
-        <p class="text-gray-500">&copy; 2024 Tu Rincón Zen. Creado con amor.</p>
-    </footer>
+       <footer class="main-footer">
+    <a href="https://www.rinconzen.com.ar" target="_blank">www.rinconzen.com.ar - Hecho con ❤️</a>
+</footer>
 
     <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -333,3 +333,4 @@
     </script>
 </body>
 </html>
+
