--- a/simbolos.html
+++ b/simbolos.html
@@ -131,8 +131,10 @@
         </svg>
     </button>
 
-       <footer class="main-footer">
-    <a href="https://www.rinconzen.com.ar" target="_blank">www.rinconzen.com.ar - Hecho con ❤️</a>
+         <footer class="text-center py-8 px-4 mt-8">
+    <a href="https://www.rinconzen.com.ar" target="_blank" class="text-gray-500">
+        www.rinconzen.com.ar - Hecho con ❤️
+    </a>
 </footer>
 
     <script>
@@ -333,4 +335,5 @@
     </script>
 </body>
 </html>
+
 
