--- a/practicas.html
+++ b/practicas.html
@@ -153,8 +153,10 @@
     </button>
 
     <footer class="text-center py-8 px-4 mt-8">
-        <p class="text-gray-500">&copy; 2024 Tu Rincón Zen. Creado con amor.</p>
-    </footer>
+    <a href="https://www.rinconzen.com.ar" target="_blank" class="text-gray-500">
+        www.rinconzen.com.ar - Hecho con ❤️
+    </a>
+</footer>
 
     <script>
     document.addEventListener('DOMContentLoaded', () => {
