--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
         </svg>
     </button>
 
-    <footer class="main-footer">
-    <a href="https://www.rinconzen.com.ar" target="_blank">www.rinconzen.com.ar - Hecho con ❤️</a>
+     <footer class="text-center py-8 px-4 mt-8">
+    <a href="https://www.rinconzen.com.ar" target="_blank" class="text-gray-500">
+        www.rinconzen.com.ar - Hecho con ❤️
+    </a>
 </footer>
 
     <script>
@@ -133,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
