--- a/dojo.html
+++ b/dojo.html
@@ -134,8 +134,10 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" /></svg>
     </button>
 
-      <footer class="main-footer">
-    <a href="https://www.rinconzen.com.ar" target="_blank">www.rinconzen.com.ar - Hecho con ❤️</a>
+     <footer class="text-center py-8 px-4 mt-8">
+    <a href="https://www.rinconzen.com.ar" target="_blank" class="text-gray-500">
+        www.rinconzen.com.ar - Hecho con ❤️
+    </a>
 </footer>
 
     <script>
