--- a/conceptos.html
+++ b/conceptos.html
@@ -125,12 +125,15 @@
 </button>
 
     <!-- Footer -->
-      <footer class="main-footer">
-    <a href="https://www.rinconzen.com.ar" target="_blank">www.rinconzen.com.ar - Hecho con ❤️</a>
+   <footer class="text-center py-8 px-4 mt-8">
+    <a href="https://www.rinconzen.com.ar" target="_blank" class="text-gray-500">
+        www.rinconzen.com.ar - Hecho con ❤️
+    </a>
 </footer>
 
 </body>
 </html>
+
 
 
 
