--- a/caja.html
+++ b/caja.html
@@ -229,5 +229,22 @@
 
     });
     </script>
+        <!-- Default Statcounter code for Okuden app
+https://okuden.netlify.app/ -->
+<script type="text/javascript">
+var sc_project=13164191; 
+var sc_invisible=1; 
+var sc_security="1a9bee61"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/"
+target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13164191/0/1a9bee61/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
