--- a/simbolos2.html
+++ b/simbolos2.html
@@ -153,9 +153,9 @@
             Reemplaza los valores 'nombre-de-tu-archivo...' con las rutas a tus archivos de audio.
             Ejemplo: src="audios/cho-ku-rei.mp3"
         -->
-        <audio id="audio-ckr" src="chokurei.mp3" preload="auto"></audio>
-        <audio id="audio-shk" src="seiheki.mp3" preload="auto"></audio>
-        <audio id="audio-hszsn" src="honshazeshonen.mp3" preload="auto"></audio>
+        <audio id="audio-ckr" src="chokurei.wav" preload="auto"></audio>
+        <audio id="audio-shk" src="seiheki.wav" preload="auto"></audio>
+        <audio id="audio-hszsn" src="honshazeshonen.wav" preload="auto"></audio>
 
     </main>
 
