--- a/simbolos2.html
+++ b/simbolos2.html
@@ -154,9 +154,9 @@
             Reemplaza los valores 'nombre-de-tu-archivo...' con las rutas a tus archivos de audio.
             Ejemplo: src="audios/cho-ku-rei.mp3"
         -->
-        <audio id="audio-ckr" src="nombre-de-tu-archivo-cho-ku-rei.mp3" preload="auto"></audio>
-        <audio id="audio-shk" src="nombre-de-tu-archivo-sei-he-ki.mp3" preload="auto"></audio>
-        <audio id="audio-hszsn" src="nombre-de-tu-archivo-hon-sha-ze-sho-nen.mp3" preload="auto"></audio>
+        <audio id="audio-ckr" src="chokurei.wav" preload="auto"></audio>
+        <audio id="audio-shk" src="seiheki.wav" preload="auto"></audio>
+        <audio id="audio-hszsn" src="honshazeshonen.wav" preload="auto"></audio>
 
     </main>
 
